--- a/src/main/webapp/resources/admin/css/register.css
+++ b/src/main/webapp/resources/admin/css/register.css
@@ -47,7 +47,7 @@ body {
 }
 
 /*inputs*/
-#msform input, #msform textarea {
+#msform input, #msform textarea, #msform select {
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 3px;
@@ -58,7 +58,6 @@ body {
     color: #2C3E50;
     font-size: 13px;
 }
-
 /*buttons*/
 #msform .action-button {
     width: 100px;
