--- a/src/main/webapp/resources/admin/login/css/style.css
+++ b/src/main/webapp/resources/admin/login/css/style.css
@@ -1,13 +1,25 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100);
+/*custom font*/
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
+
+/*basic reset*/
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    height: 100%;
+    /*Image only BG fallback*/
+
+    /*background = gradient + image pattern combo*/
+    background: linear-gradient(rgba(196, 102, 0, 0.6), rgba(155, 89, 182, 0.6));
+}
 
 body {
-    background: url(https://dl.dropboxusercontent.com/u/23299152/Wallpapers/wallpaper-22705.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    font-family: 'Roboto', sans-serif;
+    font-family: montserrat, arial, verdana;
+    margin: 10%;
 }
+
 
 .login-card {
     padding: 40px;
