--- a/src/main/webapp/resources/member/css/index.css
+++ b/src/main/webapp/resources/member/css/index.css
@@ -10,7 +10,7 @@ div#background {
             url("http://jessicazerr.com/wp-content/uploads/2013/01/bg3-1280x853.jpg");
     padding-top: 20px;
 }
-
+/* ddd */
 div#gallery {
     width: 800px;
     height: 100%;
